create flat zip archives

--- a/pdd/node/ucl/pdd/chrome/BUILD
+++ b/pdd/node/ucl/pdd/chrome/BUILD
@@ -33,7 +33,7 @@ production_env = {
 
 node_build(
   name = "chrome",
-  entry = ["app/options.js", "app/background.js"],
+  entry = ["options.js", "background.js"],
   srcs = glob(["**/*.js", "**/*.css"]),
   env = select({
     ":devel": devel_env,
