--- a/pdd/node/ucl/pdd/chrome/manifest.json
+++ b/pdd/node/ucl/pdd/chrome/manifest.json
@@ -12,9 +12,9 @@
   },
 
   "icons": {
-    "16": "images/icon16.png",
-    "48": "images/icon48.png",
-    "128": "images/icon128.png"
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
   },
 
   "content_security_policy": "script-src 'self' https://fonts.googleapis.com 'unsafe-eval'; object-src 'self'",
@@ -25,7 +25,7 @@
   },
 
   "background": {
-    "scripts": ["background.js"]
+    "scripts": ["background.bundle.js"]
   },
 
   "permissions": [
