bind strategy + tests

--- a/pdd/javatests/ucl/pdd/storage/install/BUILD
+++ b/pdd/javatests/ucl/pdd/storage/install/BUILD
@@ -12,15 +12,18 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-package(default_visibility = ["//visibility:public"])
-
-scala_library(
-  name = "strategy",
+scala_test(
+  name = "install",
   srcs = glob(["*.scala"]),
+  size = "small",
   deps = [
-    "//pdd/java/ucl/pdd/api",
     "//pdd/java/ucl/pdd/storage",
-    "//3rdparty/jvm/com/github/nscala_time",
-    "//3rdparty/jvm/com/twitter:inject_core",
-  ],
+    "//pdd/java/ucl/pdd/storage/install",
+    "//pdd/java/ucl/pdd/storage/memory",
+    "//pdd/java/ucl/pdd/storage/mysql",
+    "//pdd/javatests/ucl/testing",
+    "//pdd/javatests/com/twitter/inject",
+     "//3rdparty/jvm/com/twitter:util_stats",
+     "//3rdparty/jvm/com/twitter:inject_core",
+  ]
 )
