--- a/pdd/java/ucl/pdd/storage/mysql/BUILD
+++ b/pdd/java/ucl/pdd/storage/mysql/BUILD
@@ -20,6 +20,7 @@ scala_library(
   deps = [
     "//pdd/java/ucl/pdd/api",
     "//pdd/java/ucl/pdd/storage",
+    "//pdd/java/ucl/pdd/util",
     "//3rdparty/jvm/com/twitter:util_core",
     "//3rdparty/jvm/com/twitter:inject_slf4j",
     "//3rdparty/jvm/com/twitter:finagle_mysql",
