--- a/pdd/java/ucl/pdd/util/BUILD
+++ b/pdd/java/ucl/pdd/util/BUILD
@@ -15,14 +15,9 @@
 package(default_visibility = ["//visibility:public"])
 
 scala_library(
-  name = "storage",
+  name = "util",
   srcs = glob(["*.scala"]),
   deps = [
-    "//pdd/java/ucl/pdd/api",
-    "//pdd/java/ucl/pdd/util",
     "//3rdparty/jvm/com/twitter:util_core",
-  ],
-  exports = [
-    "//pdd/java/ucl/pdd/util",
   ],
 )
