--- a/pdd/node/ucl/pdd/chrome/manifest.json
+++ b/pdd/node/ucl/pdd/chrome/manifest.json
@@ -20,7 +20,7 @@
   "content_security_policy": "script-src 'self' https://fonts.googleapis.com 'unsafe-eval'; object-src 'self'",
 
   "browser_action": {
-    "default_icon": "images/icon.png",
+    "default_icon": "icon.png",
     "default_title": "Private Data Donor"
   },
 
