--- a/3rdparty/package.json
+++ b/3rdparty/package.json
@@ -1,4 +1,3 @@
-
 {
   "license": "Apache-2.0",
   "dependencies": {
@@ -6,7 +5,6 @@
     "@blueprintjs/datetime": "^2.0.0-rc.2",
     "autobind-decorator": "^2.1.0",
     "bn.js": "^4.11.8",
-    "crypto-browserify": "^3.12.0",
     "elliptic": "^6.4.0",
     "immutable": "^3.8.2",
     "moment": "^2.19.3",
@@ -34,6 +32,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "file-loader": "^1.1.5",
+    "jasmine": "^3.1.0",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.9.1"
