move queries into their store

--- a/pdd/javatests/ucl/pdd/storage/memory/BUILD
+++ b/pdd/javatests/ucl/pdd/storage/memory/BUILD
@@ -22,5 +22,6 @@ scala_test(
     "//pdd/javatests/ucl/testing",
     "//pdd/javatests/ucl/pdd/storage",
     "//3rdparty/jvm/com/github/nscala_time",
+    "//3rdparty/jvm/com/twitter:util_core",
   ]
 )
