--- a/3rdparty/dependencies.yml
+++ b/3rdparty/dependencies.yml
@@ -54,3 +54,7 @@ dependencies:
       version: "1.6.4"
       modules: [logback]
       lang: java
+  com.datadoghq:
+    java-dogstatsd-client:
+      lang: java
+      version: "2.5"
