--- a/pdd/java/ucl/pdd/observability/datadog/BUILD
+++ b/pdd/java/ucl/pdd/observability/datadog/BUILD
@@ -15,13 +15,12 @@
 package(default_visibility = ["//visibility:public"])
 
 scala_library(
-  name = "slf4j",
+  name = "datadog",
   srcs = glob(["*.scala"]),
   deps = [
-    "//3rdparty/jvm/ch/qos/logback:logback_core",
-    "//3rdparty/jvm/ch/qos/logback:logback_classic",
-    "//3rdparty/jvm/io/sentry:sentry_logback",
-    "//3rdparty/jvm/com/twitter:inject_app",
+    "//3rdparty/jvm/com/datadoghq:java_dogstatsd_client",
+    "//3rdparty/jvm/com/twitter:util_stats",
   ],
-  resources = ["logback.xml"],
+  resources = glob(["META-INF/**"]),
+  resource_strip_prefix = "pdd/java/ucl/pdd/observability/datadog",
 )
