--- a/pdd/java/ucl/pdd/server/BUILD
+++ b/pdd/java/ucl/pdd/server/BUILD
@@ -22,13 +22,13 @@ scala_binary(
     "//pdd/java/ucl/pdd/config:annotations",
     "//pdd/java/ucl/pdd/jackson",
     "//pdd/java/ucl/pdd/strategy",
-    "//pdd/java/ucl/pdd/util/slf4j",
+    "//pdd/java/ucl/pdd/observability/logging",
     "//pdd/java/ucl/pdd/storage",
     "//pdd/java/ucl/pdd/storage/install",
     "//3rdparty/jvm/com/twitter:finatra_http",
-    "//3rdparty/jvm/ch/qos/logback:logback_core",
-    "//3rdparty/jvm/ch/qos/logback:logback_classic",
-    "//3rdparty/jvm/io/sentry:sentry_logback",
+  ],
+  runtime_deps = [
+    "//pdd/java/ucl/pdd/observability/datadog",
   ],
   main_class = "ucl.pdd.server.PddServerMain",
 )
