--- a/pdd/java/ucl/pdd/observability/logging/BUILD
+++ b/pdd/java/ucl/pdd/observability/logging/BUILD
@@ -15,12 +15,13 @@
 package(default_visibility = ["//visibility:public"])
 
 scala_library(
-  name = "datadog",
+  name = "logging",
   srcs = glob(["*.scala"]),
   deps = [
-    "//3rdparty/jvm/com/datadoghq:java_dogstatsd_client",
-    "//3rdparty/jvm/com/twitter:util_stats",
+    "//3rdparty/jvm/ch/qos/logback:logback_core",
+    "//3rdparty/jvm/ch/qos/logback:logback_classic",
+    "//3rdparty/jvm/io/sentry:sentry_logback",
+    "//3rdparty/jvm/com/twitter:inject_app",
   ],
-  resources = glob(["META-INF/**"]),
-  resource_strip_prefix = "pdd/java/ucl/pdd/util/datadog",
+  resources = ["logback.xml"],
 )
