--- a/3rdparty/dependencies.yml
+++ b/3rdparty/dependencies.yml
@@ -42,6 +42,10 @@ dependencies:
       version: 18.2.0
       lang: scala
       modules: [core, stats]
+    twitter-server:
+      version: "18.2.0"
+      lang: scala
+      modules: [logback-classic]
   ch.qos.logback:
     logback-classic:
       version: 1.2.3
