--- a/3rdparty/jvm/com/twitter/BUILD
+++ b/3rdparty/jvm/com/twitter/BUILD
@@ -428,7 +428,7 @@ scala_import(
         ":finagle_stats",
         ":inject_app",
         ":inject_modules",
-        ":twitter_server_2_11"
+        ":twitter_server"
     ],
     jars = [
         "//external:jar/com/twitter/inject_server_2_11"
@@ -505,11 +505,47 @@ java_library(
 
 
 
-java_library(
-    name = "twitter_server_2_11",
+scala_import(
+    name = "twitter_server",
     exports = [
-        "//external:jar/com/twitter/twitter_server_2_11",
-        ":util_jvm_2_11"
+        "//3rdparty/jvm/com/fasterxml/jackson/core:jackson_core",
+        "//3rdparty/jvm/com/fasterxml/jackson/core:jackson_databind",
+        "//3rdparty/jvm/com/fasterxml/jackson/module:jackson_module_scala_2_11",
+        ":finagle_core",
+        ":finagle_http_2_11",
+        ":finagle_toggle_2_11",
+        ":finagle_tunable_2_11",
+        ":util_app_2_11",
+        ":util_core",
+        ":util_jvm_2_11",
+        ":util_lint_2_11",
+        ":util_registry_2_11",
+        ":util_slf4j_api_2_11",
+        ":util_slf4j_jul_bridge_2_11",
+        ":util_tunable_2_11"
+    ],
+    jars = [
+        "//external:jar/com/twitter/twitter_server_2_11"
+    ],
+    visibility = [
+        "//visibility:public"
+    ]
+)
+
+
+
+scala_import(
+    name = "twitter_server_logback_classic",
+    exports = [
+        "//3rdparty/jvm/org/scala_lang:scala_library",
+        "//3rdparty/jvm/org/slf4j:jcl_over_slf4j",
+        "//3rdparty/jvm/org/slf4j:jul_to_slf4j",
+        "//3rdparty/jvm/org/slf4j:log4j_over_slf4j",
+        "//3rdparty/jvm/org/slf4j:slf4j_api",
+        ":twitter_server"
+    ],
+    jars = [
+        "//external:jar/com/twitter/twitter_server_logback_classic_2_11"
     ],
     visibility = [
         "//visibility:public"
