--- a/3rdparty/package.json
+++ b/3rdparty/package.json
@@ -1,8 +1,8 @@
 {
   "license": "Apache-2.0",
   "dependencies": {
-    "@blueprintjs/core": "^2.0.0-rc.2",
-    "@blueprintjs/datetime": "^2.0.0-rc.2",
+    "@blueprintjs/core": "^2.0.1",
+    "@blueprintjs/datetime": "^2.0.1",
     "autobind-decorator": "^2.1.0",
     "bn.js": "^4.11.8",
     "elliptic": "^6.4.0",
