--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,17 @@
+# Copyright 2017-2018 UCL / Vincent Primault <v.primault@ucl.ac.uk>
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+# http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 title: Private Data Donor
 email: pddisense@ucl.ac.uk
 description: >
@@ -7,12 +21,8 @@ baseurl: ""
 url: "https://ppd.cs.ucl.ac.uk"
 
 markdown: kramdown
-gems:
-  - jemoji
-  - jekyll-sitemap
-  - jekyll-feed
-include:
-  - content.json
+plugins:
+- jekyll-sitemap
 exclude:
-  - Gemfile
-  - Gemfile.lock
+- Gemfile
+- Gemfile.lock
