Fix border issue

--- a/docs/BUILD
+++ b/docs/BUILD
@@ -15,6 +15,6 @@
 load("//tools/build_rules/jekyll:jekyll_build.bzl", "jekyll_build")
 
 jekyll_build(
-  name = "pdd",
+  name = "docs",
   srcs = glob(["**/*"])
 )
