--- a/3rdparty/package.json
+++ b/3rdparty/package.json
@@ -33,6 +33,7 @@
     "file-loader": "^1.1.5",
     "jasmine": "^3.1.0",
     "style-loader": "^0.19.0",
+    "uglifyjs-webpack-plugin": "^1.2.4",
     "url-loader": "^0.6.2",
     "webpack": "^3.9.1"
   }
