--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,13 +1,28 @@
+# PDD is a platform for privacy-preserving Web searches collection.
+# Copyright (C) 2016-2018 Vincent Primault <v.primault@ucl.ac.uk>
+#
+# PDD is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# PDD is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with PDD.  If not, see <http://www.gnu.org/licenses/>.
+
 source "https://rubygems.org"
 ruby RUBY_VERSION
 
-gem "jekyll", "3.4.3"
+gem "jekyll", "3.7.3"
 
 # If you have any plugins, put them here!
 group :jekyll_plugins do
-   gem "jekyll-feed", "~> 0.6"
-   gem "jemoji", "~> 0.9"
-   gem "jekyll-sitemap", "~> 1.1"
+   gem "jekyll-feed", "0.9.3"
+   gem "jekyll-sitemap", "1.2.0"
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
