--- a/tools/bazel.rc
+++ b/tools/bazel.rc
@@ -15,8 +15,26 @@
 # along with PDD.  If not, see <http://www.gnu.org/licenses/>.
 
 common --color=yes
-
 build --strategy=Scalac=worker
 test --strategy=Scalac=worker
-
 build --workspace_status_command=tools/print-workspace-status.sh
+
+# Ignore problematic directories (because they may contain files named build/BUILD, which messes
+# up with Bazel).
+build --deleted_packages .git
+
+# Here follow the configuration relevant for continuous integration services.
+# Run with: bazel test --config=ci
+common:ci --color=no
+build:ci --verbose_failures
+build:ci --sandbox_debug
+build:ci --spawn_strategy=standalone
+build:ci --genrule_strategy=standalone
+build:ci --noshow_progress
+build:ci --noshow_loading_progress
+test:ci --test_strategy=standalone
+test:ci --test_output=errors
+
+# Build for production environment.
+build:ci --define env=production
+test:ci --define env=production
