--- a/3rdparty/package.json
+++ b/3rdparty/package.json
@@ -6,6 +6,7 @@
     "autobind-decorator": "^2.1.0",
     "bn.js": "^4.11.8",
     "elliptic": "^6.4.0",
+    "marked": "^0.3.19",
     "moment": "^2.19.3",
     "prop-types": "^15.6.0",
     "raven-js": "^3.22.0",
@@ -21,21 +22,21 @@
   },
   "devDependencies": {
     "airbnb-browser-shims": "^2.0.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-airbnb": "^2.4.0",
-    "css-loader": "^0.28.7",
+    "css-loader": "^0.28.11",
     "eslint": "^4.16.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
-    "file-loader": "^1.1.5",
+    "file-loader": "^1.1.11",
     "jasmine": "^3.1.0",
-    "style-loader": "^0.19.0",
-    "uglifyjs-webpack-plugin": "^1.2.4",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.9.1"
+    "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.8.1",
+    "webpack-cli": "^2.1.3"
   }
 }
