--- a/tools/bin/BUILD
+++ b/tools/bin/BUILD
@@ -19,7 +19,7 @@ load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")
 nodejs_binary(
   name = "webpack",
   node_modules = "//3rdparty:node_modules",
-  entry_point = "webpack/bin/webpack.js",
+  entry_point = "webpack-cli/bin/webpack.js",
   visibility = ["//visibility:public"],
 )
 
