--- a/tools/bazel.rc
+++ b/tools/bazel.rc
@@ -21,7 +21,7 @@ build --workspace_status_command=tools/print-workspace-status.sh
 
 # Ignore problematic directories (because they may contain files named build/BUILD, which messes
 # up with Bazel).
-build --deleted_packages .git
+build --deleted_packages .git,3rdparty/node_modules/rxjs/src
 
 # Here follow the configuration relevant for continuous integration services.
 # Run with: bazel test --config=ci
