Collect the total number of searches performed
- The total number of searches, regardless of whether is is actually
monitored, is not collected. This was needed for normalisation purposes.
- pdd/api has been renamed into pdd/domain.
- More tests for pdd/service.

--- a/3rdparty/package.json
+++ b/3rdparty/package.json
@@ -18,7 +18,8 @@
     "react-transition-group": "^2.2.1",
     "react-vis": "^1.8.1",
     "request": "^2.83.0",
-    "url-parse": "^1.2.0"
+    "url-parse": "^1.2.0",
+    "lodash": "^4.17.5"
   },
   "devDependencies": {
     "airbnb-browser-shims": "^2.0.0",
