--- a/pdd/java/ucl/pdd/domain/BUILD
+++ b/pdd/java/ucl/pdd/domain/BUILD
@@ -17,7 +17,7 @@
 package(default_visibility = ["//visibility:public"])
 
 scala_library(
-  name = "api",
+  name = "domain",
   srcs = glob(["*.scala"]),
   deps = [
     "//3rdparty/jvm/com/github/nscala_time",
