--- a/pdd/javatests/ucl/pdd/service/BUILD
+++ b/pdd/javatests/ucl/pdd/service/BUILD
@@ -20,7 +20,7 @@ scala_test(
   size = "small",
   deps = [
     "//pdd/java/ucl/pdd/service",
-    "//pdd/java/ucl/pdd/api",
+    "//pdd/java/ucl/pdd/domain",
     "//pdd/java/ucl/pdd/strategy",
     "//pdd/java/ucl/pdd/storage",
     "//pdd/java/ucl/pdd/storage/memory",
