--- a/3rdparty/jvm/org/apache/httpcomponents/BUILD
+++ b/3rdparty/jvm/org/apache/httpcomponents/BUILD
@@ -4,7 +4,8 @@ java_library(
     exports = [
         "//3rdparty/jvm/commons_codec:commons_codec",
         "//3rdparty/jvm/commons_logging:commons_logging",
-        "//external:jar/org/apache/httpcomponents/httpclient"
+        "//external:jar/org/apache/httpcomponents/httpclient",
+        ":httpcore"
     ],
     visibility = [
         "//visibility:public"
