--- a/3rdparty/package.json
+++ b/3rdparty/package.json
@@ -5,7 +5,10 @@
     "@blueprintjs/datetime": "^2.0.1",
     "autobind-decorator": "^2.1.0",
     "bn.js": "^4.11.8",
+    "country-data": "^0.0.31",
     "elliptic": "^6.4.0",
+    "jstz": "^2.0.0",
+    "lodash": "^4.17.5",
     "marked": "^0.3.19",
     "moment": "^2.19.3",
     "prop-types": "^15.6.0",
@@ -18,8 +21,7 @@
     "react-transition-group": "^2.2.1",
     "react-vis": "^1.8.1",
     "request": "^2.83.0",
-    "url-parse": "^1.2.0",
-    "lodash": "^4.17.5"
+    "url-parse": "^1.2.0"
   },
   "devDependencies": {
     "airbnb-browser-shims": "^2.0.0",
