--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,7 +18,7 @@ title: Private Data Donor
 email: pddisense@ucl.ac.uk
 description: >
   Private Data Donor is a research project whose goal is to collect data in a privacy-preserving way,
-  in order to identify outbreaks of infectious disease much earlier than ever before.
+  in order to identify outbreaks of infectious diseases much earlier than ever before.
 baseurl: ""
 url: "https://ppd.cs.ucl.ac.uk"
 
