--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ env:
   - MYSQL_HOST=127.0.0.1
   - MYSQL_USER=root
   matrix:
-  - BAZEL_VERSION=0.11.0
+  - BAZEL_VERSION=0.15.2
 
 before_install:
 - |
@@ -45,7 +45,7 @@ script:
 - |
   bazel \
     --output_base=$HOME/.cache/bazel \
-    --batch \
+    --nokeep_state_after_build \
     --host_jvm_args=-Xmx500m \
     --host_jvm_args=-Xms500m \
     run \
@@ -56,7 +56,7 @@ script:
 - |
   bazel \
     --output_base=$HOME/.cache/bazel \
-    --batch \
+    --nokeep_state_after_build \
     --host_jvm_args=-Xmx500m \
     --host_jvm_args=-Xms500m \
     test \
