Introduce a blacklist feature
This allows users to prevent some keywords from being monitored by the extension. Arbitrary queries may be blacklisted (and revoked, enabling them again).

--- a/pdd/node/ucl/pdd/chrome/manifest.json
+++ b/pdd/node/ucl/pdd/chrome/manifest.json
@@ -4,7 +4,7 @@
   "name": "Private Data Donor",
   "short_name": "PDD",
   "description": "It connects researchers with volunteers. It monitors web searches in order to study the spread of infectious diseases such as flu.",
-  "version": "0.6.13",
+  "version": "0.6.14",
 
   "options_ui": {
     "page": "options.html",
@@ -31,7 +31,6 @@
   "permissions": [
     "history",
     "alarms",
-    "storage",
-    "tabs"
+    "storage"
   ]
 }
